argocd/microservices/repo-server/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argocd-repo-server
  name: argocd-repo-server
